# local-ai-agent-workflow

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  RESUME.md  alembic.ini  database_schema.sql  docker-compose.yml  pyproject.toml  requirements.txt  run_eval.py
.github/workflows/: ci.yml
app/: __init__.py  agents.py  api.py  auth.py  confidence.py  config.py  database.py  db_models.py  intake.py  langchain_backend.py  llm_client.py  logging_config.py  main.py  orchestrator.py  prompts.py  schemas.py  validators.py
app/utils/: langsmith_setup.py
data/: eval_labels.json
data/sample_requests/: billing_01.txt  billing_02.txt  billing_03.txt  billing_04_missing_invoice.txt  billing_05_missing_id.txt  complaint_01.txt  complaint_02.txt  complaint_03.txt  complaint_04_missing_action.txt  general_01.txt  general_02.txt  general_03_ambiguous.txt  internal_01.txt  internal_02.txt  internal_03.txt  policy_01.txt  policy_02.txt  policy_03.txt  policy_04_missing_topic.txt  support_01.txt  support_02.txt  support_03.txt  support_04_missing_priority.txt  vendor_01.txt  vendor_02.txt  vendor_03.txt  vendor_04_missing_vendor.txt
docker/: Dockerfile
docs/: architecture.md  verification.md
evaluation/: smoke_test.py
migrations/: env.py
scripts/: capture_streamlit_screenshots.py  check_ollama.py
src/: config.py
src/agents/: document_agent.py  (+1 more)
tests/: test_agent.py  test_api.py  test_api_and_intake.py  test_extraction.py  test_features.py  test_schemas.py  test_validation.py
ui/: streamlit_app.py
(+5 files in other folders)
