[project]
name = "local-ai-agent-workflow"
version = "0.2.0"
description = "Local AI agent workflow automation system"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/langchain_backend.py"]

[tool.ruff.lint.per-file-ignores]
"tests/test_api_and_intake.py" = ["UP031"]
